# mtg_logger_app

./: .gitignore  README.md  __init__.py  app.py  app_by_models.py  app_new.py  app_test.py  config.py  constants.py  db.py  db_new.py  enums.py  logger.py  models.py  plot.py  plot_by_models.py  pyproject.toml  requirements.txt  test-app.py  test_db_connection.py
.streamlit/: secrets.toml
config/: __init__.py  config.py
core/: __init__.py  enums.py  models.py
data/: __init__.py  repositories.py
ui/components/: edit_game_form.py  game_form.py  history_view.py
visualization/: __init__.py  data_provider.py  stats_calculator.py  visualizer.py
