[project]
name = "mtg-logger-app"
version = "0.1.0"
description = ""
authors = [
    { name = "Marvin", email = "marbachmann90@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "streamlit>=1.44.1,<2.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "sqlalchemy>=2.0.40,<3.0.0",
    "supabase>=1.0.3,<2.0.0",
    "matplotlib (>=3.10.1,<4.0.0)"
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "matplotlib"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
