[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg_logger"
version = "0.1.0"
authors = [
    { name = "Your Name" }
]
description = "MTG Game Logger"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["config", "core", "data", "ui", "visualization"]

